# my-transformer

./: .gitattributes  .gitignore  README.md  config.toml  main.py  pyproject.toml  ruff.toml
app/: my_attention.py  my_decoder.py  my_encoder.py  my_pos_encoding.py
configs/: bert.toml
data/: build_vocab.py  my_dataset.py
data/transformer_dataset/: build_vocab.py  my_dataset.py
model/: config.py  decoder.py  encoder.py  main.py  my_attention.py  my_decoder.py  my_encoder.py  utils.py
model/block/: my_decoder_layer.py  my_encoder_layer.py
model/embedding/: my_embedding.py  my_positional_encodeing.py  my_token_embedding.py
model/layers/: my_multi_head_attention.py  my_position_wise_feed_forward.py  my_scale_dot_product_attention.py
models/bert/: config.py  embedding.py  layer.py  main.py
models/transformer/: config.py  decoder.py  encoder.py  main.py
models/transformer/block/: my_decoder_layer.py  my_encoder_layer.py
models/transformer/embedding/: my_embedding.py  my_positional_encoding.py
models/transformer/layers/: my_multi_head_attention.py  my_position_wise_feed_forward.py  my_scale_dot_product_attention.py
models/transformer/model/: config.py  main.py
models/transformer/model/layers/: my_scale_dot_product_attention.py
scripts/: main.py  train.py
