[project]
name = "my-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "ruff>=0.9.9",
    "spacy>=3.8.5",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchtext>=0.18.0",
    "torchvision>=0.21.0",
]
